--- a/src/app/pages/tickets/header/header.component.html
+++ b/src/app/pages/tickets/header/header.component.html
@@ -7,6 +7,6 @@
       <div class="d-inline-block text-center">{{time | date: 'HH:mm:ss'}}</div>
       <p class="timer-day p-0 m-0">{{time | date: 'd MMMM y'}}</p>
     </div>
-    <p class="user-login p-0 m-0">{{user.login}}</p>
+    <p class="user-login p-0 m-0">{{user?.login}}</p>
   </div>
 </div>
