--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -3,7 +3,7 @@
     <app-header [menuType] = "selectedType"></app-header>
   </header>
   <div class="main-content">
-    <div class="p-3 overflow-auto h-100">
+    <div class="p-3 overflow-auto h-100 w-100">
       <router-outlet></router-outlet>
     </div>
     <app-aside (updateMenuType)="updateSelectedType($event)"></app-aside>
@@ -12,3 +12,4 @@
     <app-footer></app-footer>
   </footer>
 </div>
+<p-toast position="top-left"></p-toast>
