--- a/src/app/pages/auth/registration/registration.component.html
+++ b/src/app/pages/auth/registration/registration.component.html
@@ -29,7 +29,7 @@
            pInputText
            [(ngModel)]="email"/>
   </div>
-  <div>
+  <div *ngIf="showCardNumber; else noSelected">
     <span class="mx-3">Номер карты</span>
     <input type="text"
            class="mt-3"
@@ -50,3 +50,7 @@
             class="btn btn-primary">Зарегистрироваться</button>
   </div>
 </div>
+
+<ng-template #noSelected>
+  <p>Карта не выбрана</p>
+</ng-template>
