--- a/src/app/pages/settings/statistic/statistic.component.html
+++ b/src/app/pages/settings/statistic/statistic.component.html
@@ -1,1 +1,14 @@
-<p>statistic works!</p>
+<p-table [value]="users">
+  <ng-template pTemplate="header">
+    <tr>
+      <th *ngFor="let col of cols">
+        {{col.header}}
+      </th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-user>
+    <tr>
+      <td *ngFor="let col of cols">{{user[col.field]}}</td>
+    </tr>
+  </ng-template>
+</p-table>
