--- a/src/app/pages/ticket-info/ticket-item/ticket-item.component.scss
+++ b/src/app/pages/ticket-info/ticket-item/ticket-item.component.scss
@@ -1,14 +1,28 @@
+.ticket-info-wrap{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: center;
+  flex: 1;
+}
+
 .ticket-card{
-  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-content: center;
-  margin: 1rem 8%;
+  margin: 1rem 11%;
+  & .ticket-img{
+    width: 70%;
+    border-radius: 5px;
+    margin: 1rem auto;
+    box-shadow: 3px 5px 10px rgba(0,0,0,.3);
+  }
   & .ticket-card-footer{
     display: flex;
     justify-content: space-between;
     align-content: center;
+    //margin: ;
     & .ticket-price{
       display: inline-block;
       padding: 5px 1rem;
