--- a/src/app/pages/tickets/aside/aside.component.html
+++ b/src/app/pages/tickets/aside/aside.component.html
@@ -1,9 +1,23 @@
-<div>
+<div class="mt-3 text-center">
   <p-dropdown [options]="menuTypes"
               [(ngModel)]="selectedMenuType"
               optionLabel="label"
-              (onChange)="changeType($event)"
-              class="dropdownMenu">
-
+              (onChange)="changeType($event)">
   </p-dropdown>
+</div>
+<div class="mt-3 text-center">
+  <p-dropdown class="mt-3"
+              [options]="tourTypes"
+              optionLabel="label"
+              (onChange)="changeTourType($event)">
+  </p-dropdown>
+</div>
+<div class="mt-3 text-center">
+  <p-calendar (onSelect)="selectDate($event)"></p-calendar>
+</div>
+<div class="mt-3 text-center">
+  <button (click)="initRestError()" type="button" class="btn btn-danger">ERROR</button>
+</div>
+<div class="mt-3 text-center">
+  <button (click)="initSettingsData()" type="button" class="btn btn-secondary">Обновить настройки</button>
 </div>
