--- a/src/app/pages/tickets/aside/aside.component.html
+++ b/src/app/pages/tickets/aside/aside.component.html
@@ -21,3 +21,10 @@
 <div class="mt-3 text-center">
   <button (click)="initSettingsData()" type="button" class="btn btn-secondary">Обновить настройки</button>
 </div>
+<div class="mt-3 text-center">
+  <button (click)="initTours()" type="button" class="btn btn-secondary">Сформировать туры</button>
+</div>
+<div class="mt-3 text-center">
+  <button (click)="deleteTours()" type="button" class="btn btn-secondary">Удалить туры</button>
+</div>
+
